# pam_access_osx

./: .autotools  .cproject  .gitignore  .project  .travis.yml  Makefile.am  README  configure.ac
man/: access.conf.5.md  pam_access_osx.8.md
src/: access_conf.c  access_conf.h  access_conf_parser.c  access_conf_parser.h  ip_util.c  ip_util.h  pam_access_osx.c  pam_access_osx.h
tests/: test_access_conf.c  test_access_conf_parser_failure.c  test_access_conf_parser_parse.c  test_access_conf_parser_validate_invalid.c  test_access_conf_parser_validate_valid.c  test_access_exports.c  test_access_parser.c  test_end_to_end.c  test_ip_network.c
tests/resources/etc/: access.conf  bad-access.conf
